--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 backports.entry-points-selectable==1.1.1
+bcrypt==3.2.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
 decorator==5.1.0
@@ -7,6 +11,8 @@ dnspython==2.1.0
 email-validator==1.1.3
 filelock==3.4.0
 Flask==2.0.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
@@ -20,9 +26,15 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 platformdirs==2.4.0
+pycparser==2.21
+PyJWT==2.3.0
+pytz==2021.3
+requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.27
 SQLAlchemy-Utils==0.38.1
+twilio==7.4.0
+urllib3==1.26.7
 validators==0.18.2
 virtualenv==20.10.0
 Werkzeug==2.0.2
