--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 marshmallow==3.14.1
+ngrok==0.0.1
 platformdirs==2.4.0
 pycparser==2.21
 PyJWT==2.3.0
