--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,42 @@
-backports.entry-points-selectable==1.1.1
+APScheduler==3.8.1
 bcrypt==3.2.0
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9
+charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
-decorator==5.1.0
-distlib==0.3.4
-dnspython==2.1.0
+decorator==5.1.1
+dnspython==2.2.0
 email-validator==1.1.3
-filelock==3.4.0
 Flask==2.0.2
 Flask-Bcrypt==0.7.1
+Flask-HTTPAuth==4.5.0
 Flask-Login==0.5.0
-flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
-gunicorn==20.1.0
 idna==3.3
 infinity==1.5
 intervals==0.9.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-marshmallow==3.14.1
-ngrok==0.0.1
-platformdirs==2.4.0
+numpy==1.22.1
+opencv-python==4.5.5.62
 pycparser==2.21
 PyJWT==2.3.0
 pytz==2021.3
-requests==2.26.0
+pytz-deprecation-shim==0.1.0.post0
+requests==2.27.1
 six==1.16.0
-SQLAlchemy==1.4.27
-SQLAlchemy-Utils==0.38.1
-twilio==7.4.0
-urllib3==1.26.7
+SQLAlchemy==1.4.31
+SQLAlchemy-Utils==0.38.2
+twilio==7.5.0
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.8
 validators==0.18.2
-virtualenv==20.10.0
 Werkzeug==2.0.2
-WTForms==3.0.0
+WTForms==3.0.1
 WTForms-Alchemy==0.18.0
 WTForms-Components==0.10.5
